# goit-pythonweb-hw-03

./: Dockerfile  README.md  docker-compose.yaml  error.html  index.html  main.py  message.html  pyproject.toml
templates/: read.html
